--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <li>Bird Seed Bars</li>
     </ul>
     <!-- Add links and images here -->
+    <a href="example.com">Visit our Website</a>
+    <br>
+    <img src="assets/images/okeykat-w6elADh_jww-unsplash.jpg" alt="Dog Biscuits">
+    <img src="assets/images/cala-i2aFnaZ31Cg-unsplash.jpg" alt="Cat Treats">
+    <img src="assets/images/erin-minuskin-JRDbrrF_634-unsplash.jpg" alt="Bird Seed Bar">
 </body>
 
 </html>
