--- a/index.html
+++ b/index.html
@@ -17,9 +17,23 @@
     <!-- Add links and images here -->
     <a href="example.com">Visit our Website</a>
     <br>
-    <img src="assets/images/okeykat-w6elADh_jww-unsplash.jpg" alt="Dog Biscuits">
-    <img src="assets/images/cala-i2aFnaZ31Cg-unsplash.jpg" alt="Cat Treats">
-    <img src="assets/images/erin-minuskin-JRDbrrF_634-unsplash.jpg" alt="Bird Seed Bar">
+    <section class="product-cards">
+        <div class="product-card">
+            <img src="assets/images/okeykat-w6elADh_jww-unsplash.jpg" alt="Dog Biscuits">
+            <h3>Dog Biscuits</h3>
+            <p>Crunchy and healthy biscuits for your dog.</p>
+        </div>
+        <div class="product-card">
+            <img src="assets/images/cala-i2aFnaZ31Cg-unsplash.jpg" alt="Cat Treats">
+            <h3>Cat Treats</h3>
+            <p>Delicious and nutritious treats for your cat.</p>
+        </div>
+        <div class="product-card">
+            <img src="assets/images/erin-minuskin-JRDbrrF_634-unsplash.jpg" alt="Bird Seed Bar">
+            <h3>Bird Seed Bars</h3>
+            <p>Seed bars packed with essential nutrients for birds.</p>
+        </div>
+    </section>
 </body>
 
 </html>
